# ArtConnectNFT

./: .replit  Pasted-et-s-break-down-what-each-type-will-need-in-terms-of-blockchain-interactions-and-app-features-1-A-1729384555430.txt  app.py  auth.py  blockchain_simulator.py  deploy_and_run.sh  hardhat.config.js  lit_protocol.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  replit_zip_error_log.txt  routes.py  utils.py
.local/share/hardhat-nodejs/: analytics.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
artifacts/@openzeppelin/contracts/token/ERC721/extensions/IERC721Metadata.sol/: IERC721Metadata.dbg.json
artifacts/@openzeppelin/contracts/utils/Strings.sol/: Strings.dbg.json
artifacts/@openzeppelin/contracts/utils/math/Math.sol/: Math.dbg.json
artifacts/contracts/ArtistPopupNFT.sol/: ArtistPopupNFT.dbg.json  ArtistPopupNFT.json
cache/: solidity-files-cache.json
contracts/: ArtistPopupNFT.sol
scripts/: deploy.js
static/css/: custom.css
static/js/: chart_config.js  main.js
templates/: artwork.html  base.html  dashboard.html  exclusive_content.html  index.html  login.html  register.html  verify_ownership.html
