[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "web3>=7.4.0",
    "eth-account>=0.13.4",
    "siwe>=4.4.0",
    "alchemy-sdk",
    "skale-py>=0.57.0",
    "python-dotenv",
]
